--- a/websockets.html
+++ b/websockets.html
@@ -3,8 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            position: relative;
+            box-sizing: border-box;
+            font-family: sans-serif;
+            font-size: 16px;
+        }
+
+        body {
+            display: grid;
+            grid-template-areas: "header header header" "left main right" "footer footer footer";
+            grid-template-columns: 1fr 3fr 0;
+            grid-template-rows: 50px 1fr 50px;
+            width: 100%;
+            height: 100vh;
+        }
+
+        header {
+            background: darkcyan;
+            grid-area: header;
+        }
+
+        #left {
+            grid-area: left;
+            background: bisque;
+        }
+
+        main {
+            grid-area: main;
+            background: darkgrey;
+        }
+
+        #right {
+            grid-area: right;
+            background: burlywood;
+        }
+
+        footer {
+            grid-area: footer;
+            background: darkkhaki;
+        }
+    </style>
 </head>
 <body>
-<h1>Hello world!</h1>
+<header>
+HEADER
+</header>
+
+<aside id="left">
+LEFT
+</aside>
+
+<main>
+MAIN
+</main>
+
+<aside id="right">
+
+</aside>
+
+<footer>
+    FOOTER
+</footer>
 </body>
 </html>
